--- a/guideLine/html/layout/footer.html
+++ b/guideLine/html/layout/footer.html
@@ -8,4 +8,7 @@
             <li><a href="mailto:'meimi101@naver.com'"> 메일보내기 </a></li>
         </ul>
     </article>
+    <article>
+        GitHub : <a href="https://github.com/woong2021/project">https://github.com/woong2021/project</a>
+    </article>
 </section>
