--- a/guideLine/assets/sass/components/_common.scss
+++ b/guideLine/assets/sass/components/_common.scss
@@ -105,6 +105,7 @@ a{
 }
 
 .notice{
+    margin-bottom: 10px;
     padding:0 10px;
     border:1px solid #ff0000;
     background:rgb(248, 218, 222);
