--- a/pyeongtaek/assets/sass/base/_variableList.scss
+++ b/pyeongtaek/assets/sass/base/_variableList.scss
@@ -5,10 +5,13 @@
 // ----------------------------*
 $white : #ffffff;
 $gray  : #cccccc;
-$black : #020210;
+$black : #333333;
 $red   : #ff0000;
+$blue : #0051A3;
+$yellow : #FFF2AF;
+
 $bgGray: #f6f6f6;
 $fontGray6:#666666;
 $fontGray9: #999999;
-$blue : #0051A3;
 $fontHover: #0075C1;
+$sliderFont:#192E4E;
