--- a/pyeongtaek/assets/sass/components/_bullet.scss
+++ b/pyeongtaek/assets/sass/components/_bullet.scss
@@ -4,4 +4,72 @@
 //	Bullet
 // ----------------------------*
 
+/* Logo */
+.logo-header {
+    width: 126px; height: 44px;
+    background: url('../images/sprite/main-sprites.png') -199px -10px;
+}
+
+.logo-footer {
+    width: 150px; height: 53px;
+    background: url('../images/sprite/main-sprites.png') -10px -80px;
+}
+
+
+
+/* Icon */
+.icon-calculate {
+    width: 61px; height: 61px;
+    background: url('../images/sprite/main-sprites.png') -88px -153px;
+}
+
+.icon-line {
+    width: 5px; height: 23px;
+    background: url('../images/sprite/main-sprites.png') -82px -242px;
+}
+
+.icon-login {
+    width: 15px; height: 14px;
+    background: url('../images/sprite/main-sprites.png') -239px -153px;
+}
+
+.icon-mainbanner {
+    width: 169px !important; height: 50px;
+    background: url('../images/sprite/main-sprites.png') -10px -10px;
+}
+
+.icon-notice {
+    width: 50px; height: 50px;
+    background: url('../images/sprite/main-sprites.png') -272px -74px;
+}
+
+.icon-qa {
+    width: 50px; height: 50px;
+    background: url('../images/sprite/main-sprites.png') -169px -153px;
+}
+
+.icon-parkinglot {
+    width: 58px; height: 69px;
+    background: url('../images/sprite/main-sprites.png') -10px -153px;
+}
+
+.icon-reduction {
+    width: 53px; height: 50px;
+    background: url('../images/sprite/main-sprites.png') -199px -74px;
+}
+
+.icon-unpaid {
+    width: 52px; height: 66px;
+    background: url('../images/sprite/main-sprites.png') -10px -242px;
+}
+
 /* Bullet */
+.icon-more {
+    width: 50px; height: 50px;
+    background: url('../images/sprite/more-sprites.png') -10px -10px;
+}
+
+.icon-more-hover {
+    width: 50px; height: 50px;
+    background: url('../images/sprite/more-sprites.png') -10px -80px;
+}
