--- a/pyeongtaek/assets/sass/base/_variableList.scss
+++ b/pyeongtaek/assets/sass/base/_variableList.scss
@@ -15,3 +15,6 @@ $fontGray6:#666666;
 $fontGray9: #999999;
 $fontHover: #0075C1;
 $sliderFont:#192E4E;
+
+$gradient: transparent linear-gradient(#0075C1 0%, #083190 100%);
+$gradientHover: transparent linear-gradient(#005E9C 0%, #001851 100%);
