--- a/pyeongtaek/assets/sass/components/_bullet.scss
+++ b/pyeongtaek/assets/sass/components/_bullet.scss
@@ -63,7 +63,6 @@
     background: url('../images/sprite/main-sprites.png') -10px -242px;
 }
 
-/* Bullet */
 .icon-more {
     width: 50px; height: 50px;
     background: url('../images/sprite/more-sprites.png') -10px -10px;
@@ -73,3 +72,15 @@
     width: 50px; height: 50px;
     background: url('../images/sprite/more-sprites.png') -10px -80px;
 }
+
+.icon-line-mo {
+    width: 50px; height: 50px;
+    background: url('../images/icon/icon-line-mo.png');
+}
+
+.icon-line-pc {
+    width: 50px; height: 50px;
+    background: url('../images/icon/icon-line-pc.png');
+}
+
+/* Bullet */
