--- a/pyeongtaek/assets/sass/layout/_footer.scss
+++ b/pyeongtaek/assets/sass/layout/_footer.scss
@@ -7,7 +7,21 @@
 /* Footer */
 footer{
     background: $black;
-    height: 320px;
+    
+
+    @media (min-width: 320px){
+        margin-top: 10vh;
+        padding: 2.5vh 2.2223vw 1.875vh;
+        height: 21.251vh;
+        box-sizing: border-box;
+    }
+
+    @media (min-width: 768px){
+        margin-top: 0;
+        height: 320px; 
+    }
+    
+
     .parkingbox-inner{
         margin: 0 auto;
 
@@ -26,32 +40,63 @@ footer{
     
             nav{
                 display: flex;
-                justify-content: center;
-                height: 40px;
                 align-items: flex-end;
 
+                @media (min-width:320px){
+                    flex-wrap: wrap;
+                    justify-content: left;
+                    padding: 0 2.2223vw;
+                }
+
+                @media (min-width: 768px){
+                    justify-content: center;
+                    height: 40px;
+                }
                 div{
                     a{
-                        font : {
-                            size: 16px;
-                            weight: 100;
-                        }
 
                         color: $fontGray9;
+
+                        @media (min-width: 320px){
+                            font : {
+                                size: 3.0556vw;
+                                weight: 100; 
+                            }
+                        }
+
+                        @media (min-width: 768px){
+                            font-size: 16px;
+                        }
                     }
                     
                 }
             }
             &:first-child{
-                padding-top: 40px;
-                height: 80px;
+                
+
+                @media (min-width: 320px){
+                    padding-top: 0;
+                }
+                @media (min-width: 768px){
+                    padding-top: 40px;
+                    height: 80px;
+                }
 
                 div{
                     a{      
-                        display: block;
-                        padding: 0 15px;
+                        display: block;    
                         border-right: 1px solid;
-                        height: 17px;
+                        
+
+                        @media (min-width: 320px){
+                            height: 1.625vh;
+                            letter-spacing: 1.4px;
+                        }
+
+                        @media (min-width: 768px){
+                            padding: 0 15px;
+                            height: 17px;
+                        }
                     }
 
                     &:last-child{
@@ -64,18 +109,43 @@ footer{
             }
             &:last-child{
                 clear: both;
-                border-top: 1px solid $fontGray9;
 
+                @media (min-width: 320px){
+                    margin: 1.25vh 0 0;
+                    border-top: 0;
+                }
+
+                @media (min-width: 768px){
+                    border-top: 1px solid $fontGray9;    
+                }
+                
                 div{
+                    margin-bottom: 5px;
                     color: $fontGray9;
 
+                    @media (min-width: 320px){
+                        width: 100%;
+                        font-size: 3.0556vw;
+                    }
+
+                    @media (min-width: 768px){
+                        width: auto;
+                        font-size: 16px;
+                    }
                     address, a{
                         color: $fontGray9; 
 
-                        font : {
-                            size: 16px;
-                            weight: 100;
+                        @media (min-width: 320px){
+                            font : {
+                                size: 3.0556vw;
+                                weight: 100;
+                            }
                         }
+
+                        @media (min-width: 768px){
+                            font-size: 16px;
+                        }
+
                     }
 
                     address{
@@ -88,13 +158,24 @@ footer{
                 }
 
                 p{
-                    margin-top: 20px;
-                    text-align: center;
+                    
+                    
                     color: $fontGray9;
 
-                    font : {
-                        size: 16px;
-                        weight: 100;
+                    @media (min-width: 320px){
+                        margin: 6.25vh 2.22223vw 0;
+                        text-align: left;
+
+                        font : {
+                            size: 3.0556vw;
+                            weight: 100;
+                        }
+                    }
+
+                    @media (min-width: 768px){
+                        margin-top: 20px;
+                        text-align: center;
+                        font-size: 16px;
                     }
                 }
             }
